--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,13 @@
             android:parentActivityName=".classic.ClassicViewsActivity"
             android:label="@string/exercise5_header" />
             
+        <!-- Exercise 7: Live Regions -->
+        <activity
+            android:name=".classic.exercise7.LiveRegionsActivity"
+            android:exported="false"
+            android:parentActivityName=".classic.ClassicViewsActivity"
+            android:label="@string/exercise7_header" />
+            
         <!-- Compose Activities -->
         <activity
             android:name=".compose.ComposeActivity"
